tests/should_fail/syntax_for_var_already_exists.nv
module main

// SHOULD FAIL: for-loop identifier already exists in this scope
let i = 99
for i in 0..10 {
    println(i)
}
